card is ok + bugs fixed + adress is their

--- a/app/views/secrets/index.html.erb
+++ b/app/views/secrets/index.html.erb
@@ -48,14 +48,14 @@
           </p>
         <% end %>
 
-        <!-- Secret Address -->
+        <!-- adress -->
         <% if secret.address.present? %>
           <p style="color: #666; font-size: 0.9em; margin-bottom: 10px;">
             <strong><%= t('secrets.address') %>:</strong> <%= secret.address %>
           </p>
         <% end %>
 
-        <!-- Secret Creator -->
+        <!-- user -->
         <div style="color: #777; font-size: 0.8em;">
           <%= t('global.user') %> <strong><%= secret.user.email if secret.user.present? %></strong>
         </div>
@@ -64,7 +64,6 @@
   <% end %>
 </div>
 
-<!-- CSS for Hover Effect -->
 <style>
   .secret-box:hover {
     transform: translateY(-5px);
