Signing of for the night, not quit finished with following, but mostly there

--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -19,6 +19,11 @@
           <%= link_to t('global.adventures'), adventures_path, class:"nav-link active" %>
         </li>
 
+        <!-- Friends list -->
+        <li class="nav-item">
+          <%= link_to t('global.friends'), root_path , class:"nav-link active" %>
+        </li>
+
         <!-- Choose language -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
