--- a/app/assets/stylesheets/UserProfileEdit.css
+++ b/app/assets/stylesheets/UserProfileEdit.css
@@ -2,19 +2,74 @@
 
 .field{
     margin-bottom:2%;
+    display:flex;
+    flex-direction: row;
+    justify-content: flex-start;
     padding: 1%;
     background-color: rgb(151, 151, 151);
     border-radius: 5px;
+    box-sizing: border-box;
+}
+
+.interactive{
+    display: flex;
+    flex-direction: row;
+    white-space: nowrap;
+    flex-basis: 42%;
+    justify-content: space-between;
+}
+.info{
+    display: flex;
+    flex-direction: row;
+}
+em,i{
+    white-space: pre;
 }
 input {
     background-color:rgb(233, 231, 222);
     padding:1%;
     border-style: none;
-    border-radius:8px;
-    width:fit-content; 
+    border-radius:5px;
+    width:fit-content;
+    height:fit-content;
 }
-label{
-    width:18%
+@media screen and (max-width:1400px) {
+    .interactive{
+        flex-basis: 48%;
+    }
+    .info{
+        flex-direction: column;
+    }
+
+}
+@media screen and (max-width:1200px) {
+    .field{
+        flex-direction: column;
+    }
+}
+@media screen and (max-width:540px) {
+    i,em{
+        white-space: inherit;
+    }
+    .interactive{
+        white-space: inherit;
+    }
+    
+}
+@media screen and (max-width:390px) {
+    input{
+        width:100%;
+    }
+}
+
+
+label:hover{
+    cursor: pointer;
+}
+
+
+#prof_pic > input {
+    display: none;
 }
 
 .actions{
