--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -76,13 +76,13 @@
           
           <div> Welcome <%= current_user.email %> </div>
           
-          <% if current_user.profile_picture.attached? %>
-            <%= link_to image_tag(current_user.profile_picture), user_view_path, method: :get  %>
-          <% else %>
+          <!--<% if current_user.profile_picture.attached? %>-->
+            <%= link_to image_tag(current_user.profile_picture) || image_tag("/assets/empty-profile-picture.png") , user_view_path, method: :get  %>
+          <!--<% else %>
 
             <%= link_to image_tag("/assets/empty-profile-picture.png"), user_view_path, method: :get  %>
 
-          <% end %>
+          <% end %>-->
 
 
 
