--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,16 @@
 
 <%= stylesheet_link_tag "UserProfileEdit" %>
-
+<script >
+  function checkpassword(){
+    const valid = document.getElementById('passwordfield').value.length > 0
+    console.log("hey")
+    if (valid){
+      document.getElementById('submit').disabled = false;
+    }else{
+      document.getElementById('submit').disabled = true;
+    }
+  }
+</script>
 <div id="UserProfileOverview">
 <h2 id="title">Edit Profile</h2>
 
@@ -23,9 +33,9 @@
           <%= f.label :"current_password:" %> 
           <!-- if we submitted an incorrect form, the already filled in fields should stay filled-->
           <% if @account_params then %>
-            <%= f.password_field :current_password, autocomplete: "current-password", value: @account_params[:current_password] %>
+            <%= f.password_field :current_password, autocomplete: "current-password", id:"passwordfield", value: @account_params[:current_password], onKeyup:"checkpassword()" %>
           <%else%>
-            <%= f.password_field :current_password, autocomplete: "current-password" %>
+            <%= f.password_field :current_password, autocomplete: "current-password", id:"passwordfield", onKeyup:"checkpassword()" %>
           <%end%>
         </div>
         <i class="info"> (we need your current password to confirm your changes)</i>
@@ -60,7 +70,7 @@
       </div>
   </div>
   <div class="actions">
-    <%= f.submit "Update profile" %>
+    <%= f.submit "Update profile", disabled:"disabled",id:"submit" %>
   </div>
 <% end %>
 
