--- a/app/views/secrets/new.html.erb
+++ b/app/views/secrets/new.html.erb
@@ -124,5 +124,5 @@
 </script>
 
 <script async
-  src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAPS_API_KEY'] %>&callback=initMap&libraries=places">
+  src="https://maps.googleapis.com/maps/api/js?key=<%= Rails.application.credentials.dig('GOOGLE_MAPS_API_KEY') %>&callback=initMap&libraries=places">
 </script>
