removed all inline css + enhanced overall UI

--- a/app/views/secrets/_secret.html.erb
+++ b/app/views/secrets/_secret.html.erb
@@ -1,21 +1,43 @@
-<div id="<%= dom_id secret %>" style="border-style:solid">
+<%= stylesheet_link_tag 'secret_page', media: 'all' %>
 
-  <p>
-    <strong><%= t('global.user') %></strong>
+<div id="<%= dom_id secret %>" class="secret-container">
+
+
+  <div class="user-info">
+    <strong><%= t('global.user') %>:</strong>
     <%= User.find(secret.user_id).email %>
-  </p>
+  </div>
 
-  <p>
-    <strong><%= t('global.name') %></strong>
-    <%= secret.name %>
-  </p>
 
-  <!-- https://www.youtube.com/watch?v=1cw6qO1EYGw -->
-  <%= link_to image_tag(secret.image_as_thumbnail), secret.image if secret.image.attached? %>
+  <h1><%= secret.name %></h1>
 
-  <p>
-    <strong><%= t('global.body') %></strong>
+
+  <div class="image-container">
+    <% if secret.image.attached? %>
+      <%= link_to image_tag(secret.image_as_thumbnail, alt: secret.name), secret.image %>
+    <% else %>
+      <div class="no-image">No image available</div>
+    <% end %>
+  </div>
+
+  <div class="body">
+    <strong><%= t('global.body') %>:</strong><br>
     <%= secret.body %>
-  </p>
+  </div>
+
+  <% if secret.secret_tags.any? %>
+    <div class="tags-section">
+      <strong>Tags:</strong>
+      <div class="tags-list">
+        <% secret.secret_tags.each do |tag| %>
+          <span class="tag <%= tag.name.parameterize %>">
+            <%= tag.name.humanize %>
+          </span>
+        <% end %>
+      </div>
+    </div>
+  <% else %>
+    <p class="no-tags">No tags available</p>
+  <% end %>
 
 </div>
