--- a/app/views/secrets/show.html.erb
+++ b/app/views/secrets/show.html.erb
@@ -1,48 +1,71 @@
-<%= render @secret %>
+<%= stylesheet_link_tag 'secret_show', media: 'all' %>
 
-<div>
-  <%= if @permission then link_to t('secrets.edit-link'), edit_secret_path(@secret) end %>
-  <%= link_to t('secrets.back-link'), secrets_path %>
+<div class="secret-container">
 
-  <%= if @permission then button_to t('secrets.destroy-link') , @secret, method: :delete end %>
+  <div class="secret-details">
+    <%= render @secret %>
+  </div>
+
+  <div class="action-bar">
+    <% if @permission %>
+      <%= link_to t('secrets.edit-link'), edit_secret_path(@secret), class: "btn-action edit-link" %>
+      <%= button_to t('secrets.destroy-link'), @secret, method: :delete, class: "btn-action delete-link", data: { confirm: 'Are you sure you want to delete this?' } %>
+    <% end %>
+    <%= link_to t('secrets.back-link'), secrets_path, class: "btn-action" %>
+  </div>
 </div>
 
-<% if @secret.comments.any? %>
-  <h3>Comments</h3>
-  <% @secret.comments.each do |comment| %>
-    <div>
 
-      <% if comment.user.profile_picture.attached? %>
-        <%= link_to image_tag(comment.user.profile_picture), edit_user_registration_path, method: :get  %>
-      <% else %>
-        <%= link_to image_tag("/assets/empty-profile-picture.png"), edit_user_registration_path, method: :get  %>
-      <% end %>
-
-      <p><strong><%= comment.user.email %>:</strong> <%= comment.content %>
-        <% if comment.edited %>
-          <em> (edited)</em>
-        <% end %></p>
-      <p><em>Posted on <%= comment.created_at.strftime('%B %d, %Y at %I:%M %p') %></em></p>
-
-      <% if comment.user == current_user %>
-        <div class="comment-actions">
-          <%= link_to 'Edit', edit_secret_comment_path(@secret, comment), class: "btn btn-link" %>
-          <%= button_to 'Delete', secret_comment_path(@secret, comment), method: :delete, data: { confirm: 'Are you sure you want to delete this comment?' }, class: "btn btn-link" %>
+<div class="comments-container">
+  <% if @secret.comments.any? %>
+    <h3 class="section-header">Comments</h3>
+    <% @secret.comments.each do |comment| %>
+      <div class="comment-item">
+   
+        <div class="comment-header">
+          <% if comment.user.profile_picture.attached? %>
+            <%= link_to image_tag(comment.user.profile_picture, class: "comment-profile"), edit_user_registration_path %>
+          <% else %>
+            <%= link_to image_tag("/assets/empty-profile-picture.png", class: "comment-profile"), edit_user_registration_path %>
+          <% end %>
+          <div class="comment-user-details">
+            <p class="comment-user"><strong><%= comment.user.email %></strong></p>
+            <p class="comment-timestamp"><em>Posted on <%= comment.created_at.strftime('%B %d, %Y at %I:%M %p') %></em></p>
+          </div>
         </div>
-      <% end %>
+
+  
+        <p class="comment-content">
+          <%= comment.content %>
+          <% if comment.edited %>
+            <em>(edited)</em>
+          <% end %>
+        </p>
+
+
+        <% if comment.user == current_user %>
+          <div class="comment-actions">
+            <%= link_to 'Edit', edit_secret_comment_path(@secret, comment), class: "btn-action" %>
+            <%= button_to 'Delete', secret_comment_path(@secret, comment), method: :delete, data: { confirm: 'Are you sure you want to delete this comment?' }, class: "btn-action delete-link" %>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+  <% else %>
+    <p class="no-comments">No comments yet. Be the first to comment!</p>
+  <% end %>
+</div>
+
+
+<div class="comment-form-container">
+  <h3 class="section-header">Add a New Comment</h3>
+  <%= form_with(model: [@secret, Comment.new], local: true) do |form| %>
+    <div class="form-group">
+      <%= form.label :content, 'Your Comment', class: "form-label" %>
+      <%= form.text_area :content, rows: 3, class: "form-textarea" %>
+    </div>
+    <div class="form-actions">
+      <%= form.submit 'Post Comment', class: "btn-submit" %>
     </div>
   <% end %>
-<% else %>
-  <p>No comments yet. Be the first to comment!</p>
-<% end %>
-
-<h3>Add a New Comment</h3>
-<%= form_with(model: [@secret, Comment.new], local: true) do |form| %>
-  <div>
-    <%= form.label :content, 'Your Comment' %>
-    <%= form.text_area :content, rows: 3 %>
-  </div>
-  <div>
-    <%= form.submit 'Post Comment' %>
-  </div>
-<% end %>
+</div>
