--- a/app/views/secrets/_form.html.erb
+++ b/app/views/secrets/_form.html.erb
@@ -30,22 +30,18 @@
 
  
   <div class="form-group">
-    <label class="form-label">Select Tags (optional):</label>
-    <div class="tag-container">
-      <% SecretTag::VALID_TAGS.each do |tag_name| %>
-        <label class="tag-label" style="background-color: <%= case tag_name
-          when 'architecture' then '#FF5733' # orange
-          when 'street-art' then '#33B5FF'   # blue
-          when 'landscape' then '#5BFF33'    # greeen
-          when 'not-tagged' then '#AAAAAA'   # grey
-          else '#CCCCCC'                     # lighter grey
-        end %>;">
-          <%= check_box_tag "secret[secret_tags_attributes][][name]", tag_name, secret.secret_tags.map(&:name).include?(tag_name), style: "display: none;" %>
-          <%= tag_name.humanize %>
-        </label>
+  <%= form.label :secret_tags, "Select Tags" %>
+
+  <% SecretTag::VALID_TAGS.each do |tag| %>
+    <div class="form-check">
+      <%= form.fields_for :secret_tags, @secret.secret_tags.build do |tag_form| %>
+        <%= tag_form.check_box :name, { checked: @secret.secret_tags.map(&:name).include?(tag) }, tag, nil %>
+        <%= tag_form.label :name, tag.humanize, class: "form-check-label" %>
       <% end %>
     </div>
-  </div>
+  <% end %>
+</div>
+
 
   
   <div class="form-group">
