--- a/app/views/secrets/show.html.erb
+++ b/app/views/secrets/show.html.erb
@@ -15,6 +15,15 @@
   </div>
 </div>
 
+<!-- Tags -->
+<% if @secret.secret_tags.any? %>
+  <h3>Tags:</h3>
+  <% @secret.secret_tags.each do |tag| %>
+    <span style="background-color: lightgrey; padding: 5px; margin-right: 5px; border-radius: 3px;">
+      <%= tag.name.humanize %>
+    </span>
+  <% end %>
+<% end %>
 
 <div class="comments-container">
   <% if @secret.comments.any? %>
