--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -120,4 +120,4 @@
   }
 </script>
 
-<script async src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAPS_API_KEY'] %>&callback=initMap&libraries=geometry"></script>
+<script async src="https://maps.googleapis.com/maps/api/js?key=<%= Rails.application.credentials.dig('GOOGLE_MAPS_API_KEY') %>&callback=initMap&libraries=geometry"></script>
