--- a/app/views/secrets/new.html.erb
+++ b/app/views/secrets/new.html.erb
@@ -73,4 +73,4 @@
   }
 </script>
 
-<script async src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAPS_API_KEY'] %>&callback=initMap&libraries=places"></script>
+<script async src="https://maps.googleapis.com/maps/api/js?key=<%= Rails.application.credentials.dig('GOOGLE_MAPS_API_KEY') %>&callback=initMap&libraries=places"></script>
