--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -44,7 +44,7 @@
         <div class="field">
           <div class="interactive">
             <%= f.label :"password:" %> 
-            <%= f.password_field :password, autocomplete: "new-password" %>
+            <%= f.password_field :password, autocomplete: "new-password",id:"newpssword" %>
           </div>
           <div class="info">
             <i> (leave blank if you don't want to change it)  </i>
