--- a/app/assets/stylesheets/UserProfileView.css
+++ b/app/assets/stylesheets/UserProfileView.css
@@ -3,7 +3,7 @@
 
 .property{
     margin-bottom: 2%;
-    width: 50%;
+    width: 60%;
     display:flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -23,16 +23,19 @@ label{
 
 @media screen and (max-width:1200px) {
     .property{
-        width:60%;
+        width:70%;
     }
  
 }
 @media screen and (max-width:992px){
     .property{
-        width:80%;
+        width:90%;
     }
 }
 @media screen and (max-width:768px){
+    .properties{
+        width:100%;
+    }
     .property{
         width:100%;
     }
