--- a/app/views/secrets/_secret.html.erb
+++ b/app/views/secrets/_secret.html.erb
@@ -5,7 +5,7 @@
 
   <div class="user-info">
     <strong><%= t('global.user') %>:</strong>
-    <%= User.find(secret.user_id).email %>
+    <%= User.find(secret.user_id).username %>
   </div>
 
 
