Finishing followers + TODO: make pretty
nieuwe "users" views aangemaakt (uit devise/registrations gekopieerd, want het is logischer dat deze onder een eigen mapje staan, maar linking moet nog geupdated worden). Followers werken, lijst van followers/followees nog niet geïmplementeerd, code om deze op te vragen staat in users/show.html.erb om te tonen dat het gaat voor bv email

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -64,7 +64,12 @@
       </div>
           <div id ="prof_pic">
         <label for="user_profile_picture">
-          <%= image_tag(current_user.profile_picture, id:"editProfPicImg") %>
+          <% if current_user.profile_picture.attached? %>
+            <%= image_tag(current_user.profile_picture, id:"editProfPicImg") %>
+          <% else %>
+            <%= image_tag("/assets/empty-profile-picture.png", id:"editProfPicImg") %>
+          <% end %>
+          
         </label>
         <%= f.file_field  :profile_picture %>
       </div>
