--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -14,9 +14,9 @@
           <%= link_to t('global.secrets'), secrets_path, class:"nav-link active" %>
         </li>
 
-        <!-- Friends list -->
+        <!-- Followers list -->
         <li class="nav-item">
-          <%= link_to t('global.friends'), root_path , class:"nav-link active" %>
+          <%= link_to t('global.volgers'), root_path , class:"nav-link active" %>
         </li>
 
         <!-- Choose language -->
@@ -76,17 +76,11 @@
           
           <div> Welcome <%= current_user.email %> </div>
           
-          <!--<% if current_user.profile_picture.attached? %>-->
-            <%= link_to image_tag(current_user.profile_picture) || image_tag("/assets/empty-profile-picture.png") , user_view_path, method: :get  %>
-          <!--<% else %>
-
+          <% if current_user.profile_picture.attached? %>
+            <%= link_to image_tag(current_user.profile_picture), user_view_path, method: :get  %>
+          <% else %>
             <%= link_to image_tag("/assets/empty-profile-picture.png"), user_view_path, method: :get  %>
-
-          <% end %>-->
-
-
-
-          <!--<%= button_to "Profile", user_view_path, method: :get %>-->
+          <% end %>
 
           <%= button_to "Sign out", destroy_user_session_path, method: :delete %> 
 
