--- a/app/assets/stylesheets/secret_page.css
+++ b/app/assets/stylesheets/secret_page.css
@@ -12,7 +12,26 @@
     margin-bottom: 15px;
     font-size: 1em;
     font-weight: 600;
-    color: #2A7FFF;
+    border-radius: 5px;
+    border: 1px solid #ddd;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    padding:2%;
+    width: fit-content;
+  }
+  .image-container{
+    width: fit-content;
+  }
+  .secretimg{
+    height: 20vw;
+  }
+  .user_profpic{
+    border: 1px solid #ddd;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    padding:3px;
+    display:inline-block;
+    height: 58px;
+    width:58px;
   }
   
   /* Secret Name */
