--- a/app/views/secrets/_secret.html.erb
+++ b/app/views/secrets/_secret.html.erb
@@ -3,9 +3,13 @@
 <div id="<%= dom_id secret %>" class="secret-container">
 
 
-  <div class="user-info">
-    <strong><%= t('global.user') %>:</strong>
-    <%= User.find(secret.user_id).email %>
+  <div class="user-details">
+    <!--<strong><%= t('global.user') %></strong>-->
+    <% @user = User.find(secret.user_id) %>
+    <%= link_to image_tag(@user.profile_picture) ,user_view_path, method: :get,class:"user_profpic"%> 
+    <%= @user.email %>
+    
+    
   </div>
 
 
@@ -14,14 +18,14 @@
 
   <div class="image-container">
     <% if secret.image.attached? %>
-      <%= link_to image_tag(secret.image_as_thumbnail, alt: secret.name), secret.image %>
+      <%= link_to image_tag(secret.image_as_thumbnail, alt: secret.name,class:"secretimg"), secret.image %>
     <% else %>
       <div class="no-image">No image available</div>
     <% end %>
   </div>
 
   <div class="body">
-    <strong><%= t('global.body') %>:</strong><br>
+    <strong><%= t('global.body') %></strong><br>
     <%= secret.body %>
   </div>
 
