--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -14,7 +14,7 @@
 .container-fluid{
     height:10%;
 }
-a > img{
+.user_profpic > img{
     vertical-align: middle;
     height:50px;
     width:50px;
