temp save, working on votes

--- a/app/views/secrets/show.html.erb
+++ b/app/views/secrets/show.html.erb
@@ -37,6 +37,27 @@
           <% else %>
             <%= link_to image_tag("/assets/empty-profile-picture.png", class: "comment-profile"), edit_user_registration_path %>
           <% end %>
+
+        <div>
+          <% upvotes = comment.votes.where(value: 1).count %>
+          <%= upvotes %> Upvotes
+          <% if current_user.votes.exists?(comment: comment, value: 1) %>
+            <%= button_to 'Undo Upvote', secret_comment_vote_path(@secret, comment), method: :delete, class: 'btn btn-outline-primary' %>
+          <% else %>
+            <%= button_to 'Upvote', secret_comment_vote_path(@secret, comment, value: 1), method: :post, class: 'btn btn-outline-primary' %>
+          <% end %>
+        </div>
+
+        <div>
+          <% downvotes = comment.votes.where(value: -1).count %>
+          <%= downvotes %> Downvotes
+          <% if current_user.votes.exists?(comment: comment, value: -1) %>
+            <%= button_to 'Undo Downvote', secret_comment_vote_path(@secret, comment), method: :delete, class: 'btn btn-outline-danger' %>
+          <% else %>
+            <%= button_to 'Downvote', secret_comment_vote_path(@secret, comment, value: -1), method: :post, class: 'btn btn-outline-danger' %>
+          <% end %>
+        </div>
+
           <div class="comment-user-details">
             <p class="comment-user"><strong><%= comment.user.username %></strong></p>
             <p class="comment-timestamp"><em>Posted on <%= comment.created_at.strftime('%B %d, %Y at %I:%M %p') %></em></p>
