improve some stuff
add address to secret, unify user view page

--- a/app/assets/stylesheets/secret_page.css
+++ b/app/assets/stylesheets/secret_page.css
@@ -21,11 +21,14 @@
   .image-container{
     width: fit-content;
   }
+  h1,#address{
+    text-align: center;
+  }
   .secretimg{
     height: 20vw;
   }
-  .user_profpic{
-    border: 1px solid #ddd;
+  .user_profpic_in_secret{
+    border: 1px solid #a5a5a5;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     padding:3px;
@@ -33,7 +36,7 @@
     height: 58px;
     width:58px;
   }
-  
+ 
   /* Secret Name */
   .secret-title {
     color: #333;
