--- a/app/assets/stylesheets/UserProfileView.css
+++ b/app/assets/stylesheets/UserProfileView.css
@@ -6,15 +6,13 @@
     width: 60%;
     display:flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-between;
     padding: 1%;
     background-color: rgb(151, 151, 151);
     border-radius: 5px;
     box-sizing: border-box;
 }
-label{
-    flex-basis:44%;
-}
+
 @media screen and (max-width:1400px) {
     label{
         flex-basis: 52%;
