--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -16,7 +16,7 @@
 
         <!-- Followers list -->
         <li class="nav-item">
-          <%= link_to t('global.volgers'), root_path , class:"nav-link active" %>
+          <%= link_to t('global.followers'), root_path , class:"nav-link active" %>
         </li>
 
         <!-- Choose language -->
@@ -76,9 +76,9 @@
           <div> Welcome <%= current_user.email %> </div>
 
           <% if current_user.profile_picture.attached? %>
-            <%= link_to image_tag(current_user.profile_picture) , user_view_path, method: :get,class:"user_profpic"  %>
+            <%= link_to image_tag(current_user.profile_picture) , user_path(current_user.id), method: :get,class:"user_profpic"  %>
           <% else %>
-            <%= link_to image_tag("/assets/empty-profile-picture.png"), user_view_path, method: :get,class:"user_profpic"  %>
+            <%= link_to image_tag("/assets/empty-profile-picture.png"), user_path(current_user.id), method: :get,class:"user_profpic"  %>
 
           <% end %>
 
