--- a/app/views/secrets/_secret.html.erb
+++ b/app/views/secrets/_secret.html.erb
@@ -2,11 +2,10 @@
 
 <div id="<%= dom_id secret %>" class="secret-container">
 
-
   <div class="user-details">
     <!--<strong><%= t('global.user') %></strong>-->
     <% @user = User.find(secret.user_id) %>
-    <%= link_to image_tag(@user.profile_picture) ,user_view_path, method: :get,class:"user_profpic"%> 
+    <%= link_to image_tag(@user.profile_picture),user_path(@user.id), method: :get,class:"user_profpic_in_secret user_profpic"%> 
     <%= @user.email %>
     
     
@@ -14,7 +13,7 @@
 
 
   <h1><%= secret.name %></h1>
-
+  <div id="address"><%= secret.address%></div>
 
   <div class="image-container">
     <% if secret.image.attached? %>
