--- a/app/assets/stylesheets/secret_homepage.css
+++ b/app/assets/stylesheets/secret_homepage.css
@@ -36,12 +36,14 @@
 
 
   .secrets-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 20px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
     padding: 20px;
   }
-
+  .secretlabel:hover{
+    cursor: pointer;
+  }
   .secret-item {
     background-color: #fff;
     border: 1px solid #ddd;
@@ -54,11 +56,12 @@
   .secret-item:hover {
     transform: translateY(-5px);
     box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+    cursor:pointer;
   }
 
   .secret-title {
     font-size: 1.5rem;
-    color: #007BFF;
+    color: #000000;
     text-align: center;
     margin-bottom: 10px;
   }
@@ -102,6 +105,9 @@
     font-size: 1.2rem;
     color: #666;
   }
-
+  h2 > form > button{
+    display: none;
+  }
+ 
 
   
