--- a/app/assets/stylesheets/secret_new.css
+++ b/app/assets/stylesheets/secret_new.css
@@ -58,6 +58,23 @@
     font-size: 1em;
     font-weight: 600;
   }
+  #form-elements{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  #imgupload{
+    display:none;
+  }
+  #form-image{
+    text-align: center;
+    border: 1px dashed black;
+    border-radius: 5px;
+  }
+  #form-image:hover{
+    cursor: pointer;
+  }
   
   .form-input, .form-textarea, .form-file {
     width: 100%;
