--- a/app/views/secrets/_form.html.erb
+++ b/app/views/secrets/_form.html.erb
@@ -10,58 +10,81 @@
     </div>
   <% end %>
 
-  
-  <div class="form-group">
-    <%= form.label :name, t('global.name'), class: 'form-label' %>
-    <%= form.text_field :name, required: true, class: 'form-input' %>
-  </div>
-
-  
-  <div class="form-group">
-    <%= form.label :image, "Upload Image", class: 'form-label' %>
-    <%= form.file_field :image, class: 'form-file' %>
-  </div>
-
-
-  <div class="form-group">
-    <%= form.label :description, t('global.description'), class: 'form-label' %>
-    <%= form.text_area :description, required: true, rows: 3, class: 'form-textarea' %>
-  </div>
-
- 
-  <div class="form-group">
-  <%= form.label :secret_tags, "Select Tags" %>
-
-  <% SecretTag::VALID_TAGS.each do |tag| %>
-    <div class="form-check">
-      <%= form.fields_for :secret_tags, @secret.secret_tags.build do |tag_form| %>
-        <%= tag_form.check_box :name, { checked: @secret.secret_tags.map(&:name).include?(tag) }, tag, nil %>
-        <%= tag_form.label :name, tag.humanize, class: "form-check-label" %>
-      <% end %>
+  <div id="form-elements">
+    <div class="form-group">
+      <%= form.label :name, t('global.name'), class: 'form-label' %>
+      <%= form.text_field :name, required: true, class: 'form-input' %>
     </div>
-  <% end %>
-</div>
 
+    
+    <div class="form-group" id="image-part" >
+      <%= form.label :image, "Upload Image", class: 'form-label',for:"imgupload",id:"form-image" %>
+      <%= form.file_field :image, class: 'form-file',id:"imgupload" %>
+    </div>
+
+
+    <div class="form-group">
+      <%= form.label :description, t('global.description'), class: 'form-label' %>
+      <%= form.text_area :description, required: true, rows: 3, class: 'form-textarea' %>
+    </div>
 
   
-  <div class="form-group">
-    <%= form.label :latitude, "Latitude", class: 'form-label' %>
-    <%= form.text_field :latitude, id: "latitudeField", readonly: true, required: true, class: 'form-input' %>
+    <div class="form-group">
+    <%= form.label :secret_tags, "Select Tags" %>
+
+    <% SecretTag::VALID_TAGS.each do |tag| %>
+      <div class="form-check">
+        <%= form.fields_for :secret_tags, @secret.secret_tags.build do |tag_form| %>
+          <%= tag_form.check_box :name, { checked: @secret.secret_tags.map(&:name).include?(tag) }, tag, nil %>
+          <%= tag_form.label :name, tag.humanize, class: "form-check-label" %>
+        <% end %>
+      </div>
+    <% end %>
   </div>
+
+
+    
+    <div class="form-group">
+      <%= form.label :latitude, "Latitude", class: 'form-label' %>
+      <%= form.text_field :latitude, id: "latitudeField", readonly: true, required: true, class: 'form-input' %>
+    </div>
+
+    
+    <div class="form-group">
+      <%= form.label :longitude, "Longitude", class: 'form-label' %>
+      <%= form.text_field :longitude, id: "longitudeField", readonly: true, required: true, class: 'form-input' %>
+    </div>
 
   
-  <div class="form-group">
-    <%= form.label :longitude, "Longitude", class: 'form-label' %>
-    <%= form.text_field :longitude, id: "longitudeField", readonly: true, required: true, class: 'form-input' %>
+    <div class="form-group">
+      <%= form.label :address, "Address", class: 'form-label' %>
+      <%= form.text_field :address, id: "addressField", readonly: true, required: true, class: 'form-input' %>
+    </div>
   </div>
-
- 
-  <div class="form-group">
-    <%= form.label :address, "Address", class: 'form-label' %>
-    <%= form.text_field :address, id: "addressField", readonly: true, required: true, class: 'form-input' %>
-  </div>
-
   <div class="form-actions">
     <%= form.submit t('.create'), class: 'submit-button' %>
   </div>
+  <script>
+  const secret_picture = document.getElementById('imgupload');
+  const section = document.getElementById('image-part');
+  secret_picture.addEventListener("change", () => {
+      if (secret_picture.files.length === 1) {;
+        const url = URL.createObjectURL(secret_picture.files[0]);
+        console.log(section.childElementCount)
+        if (section.childElementCount===3) {
+          const img = document.getElementById('secret-potential-img');
+          img.src = url
+        }else{
+          const image = document.createElement("img");
+          image.src = url;
+          image.id = "secret-potential-img"
+          image.style.height = "10vw"
+          section.appendChild(image);
+          }
+    }
+  }
+  )
+
+  
+</script>
 <% end %>
