--- a/app/views/secrets/index.html.erb
+++ b/app/views/secrets/index.html.erb
@@ -12,8 +12,9 @@
   <% if @secrets.any? %>
     <% @secrets.each do |secret| %>
       <div class="secret-item">
+        <label for="secretitem" class="secretlabel">
        
-        <h2 class="secret-title"><%= link_to secret.name, secret_path(secret) %></h2>
+        <h2 class="secret-title"><%= button_to "", secret_path(secret),id:"secretitem",method: :get %><%=secret.name%></h2>
 
         <% if secret.image.attached? %>
           <div class="secret-image">
@@ -33,6 +34,7 @@
           <p>Created by: <strong><%= secret.user.email if secret.user.present? %></strong></p>
           <p>Created on: <%= secret.created_at.strftime('%B %d, %Y') %></p>
         </div>
+        </label>
       </div>
     <% end %>
   <% else %>
