--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -14,10 +14,7 @@
           <%= link_to t('global.secrets'), secrets_path, class:"nav-link active" %>
         </li>
 
-        <!-- Followers list -->
-        <li class="nav-item">
-          <%= link_to t('global.followers'), root_path , class:"nav-link active" %>
-        </li>
+
 
         <!-- Choose language -->
         <li class="nav-item dropdown">
@@ -73,7 +70,7 @@
 
       <div class="d-flex navbar-text">
         <% if user_signed_in? %> 
-          <div> Welcome <%= current_user.email %> </div>
+          <div id="welcome"> Welcome <%= current_user.email %> </div>
 
           <% if current_user.profile_picture.attached? %>
             <%= link_to image_tag(current_user.profile_picture) , user_path(current_user.id), method: :get,class:"user_profpic"  %>
