--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,24 +3,36 @@
 <%= stylesheet_link_tag "UserProfileView" %>
 <div id="UserProfileOverview">
 <h2 id="title">Profile</h2>
-  <div class="property">
-      <label>Email:</label>
-      <div class = "field">
-          <%= @user.email%>
-      </div>
-  </div>
-  <div class="property">
-      <label >Number of secrets found:</label>
-      <div class="field_number"><%= @user.secrets.count %></div>
-  </div>
+<div class="attributes">
+  <div class="properties">
+    <div class="property">
+        <label>Email:</label>
+        <div class = "field">
+            <%= @user.email%>
+        </div>
+    </div>
+    <div class="property">
+        <label >Number of secrets found:</label>
+        <div class="field_number"><%= @user.secrets.count %></div>
+    </div>
 
-  <div class="property">
-    <label >Number of followers:</label>
-    <%= render "users/follower_count" %>
-    <label >Number of followees:</label>
-    <div class="field_number"><%= @user.followees.count %></div>
+    <div class="property">
+      <label >Followers:</label>
+      <div class="field_number"><%= render "users/follower_count" %></div>
+    </div>
+    <div class="property">
+      <label >Following:</label>
+      <div class="field_number"><%= @user.followees.count %></div>
+    </div>
   </div>
-
+      <div id= "prof_pic">
+        <% if current_user.profile_picture.attached? %>
+            <%= image_tag(current_user.profile_picture) %>
+          <% else %>
+            <%= image_tag("/assets/empty-profile-picture.png") %>
+          <% end %>
+    </div>
+</div>
   <% if @user == current_user %>
     <!-- TODO -->
     <p>code voor in een followers/followee page</p>
@@ -39,7 +51,7 @@
   <% end %>  
 
   <% if @user == current_user %>
-    <%= button_to "Edit profile", edit_user_registration_path %>
+    <%= button_to "Edit profile", edit_user_registration_path, method: :get, id:"editButton" %>
   <% elsif current_user %>
     <%= render 'users/follow_button', user: @user %>
   <% end %>
