Adding translations to most pages

--- a/app/views/secrets/index.html.erb
+++ b/app/views/secrets/index.html.erb
@@ -2,10 +2,10 @@
 <%= stylesheet_link_tag 'secret_homepage', media: 'all' %>
 
 
-<h1 class="page-header" style="text-align: center; margin-top: 20px;">Secrets</h1>
+<h1 class="page-header" style="text-align: center; margin-top: 20px;"><%= t('global.secrets')%></h1>
 
 <div class="action-bar" style="text-align: center; margin-bottom: 20px;">
-  <%= link_to 'Create a New Secret', new_secret_path, class: 'btn-action new-link' %>
+  <%= link_to t('secrets.new-link'), new_secret_path, class: 'btn-action new-link' %>
 </div>
 
 <div class="secrets-container">
@@ -26,17 +26,17 @@
             <%= truncate(secret.description, length: 100, omission: '...') %>
           </p>
         <% else %>
-          <p class="secret-description">No description available.</p>
+          <p class="secret-description"><%= t('.no-description') %></p>
         <% end %>
 
         <div class="secret-meta">
-          <p>Created by: <strong><%= secret.user.email if secret.user.present? %></strong></p>
-          <p>Created on: <%= secret.created_at.strftime('%B %d, %Y') %></p>
+          <p><%= t('.created-by') %><strong><%= secret.user.email if secret.user.present? %></strong></p>
+          <p><%= t('.created-on') %><%= secret.created_at.strftime('%B %d, %Y') %></p>
         </div>
       </div>
     <% end %>
   <% else %>
-    <p class="no-secrets" style="text-align: center;">No secrets available yet. Be the first to add one!</p>
+    <p class="no-secrets" style="text-align: center;"><%= t('.first-secret') %></p>
   <% end %>
 </div>
 
