--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -2,12 +2,12 @@
 
 <%= form_with model: [@secret, @comment], local: true do |form| %>
   <div>
-    <%= form.label :content, 'Your Comment' %>
+    <%= form.label :content, t('.your-comment') %>
     <%= form.text_area :content, rows: 3 %>
   </div>
   <div>
-    <%= form.submit 'Update Comment' %>
+    <%= form.submit t('.update-comment') %>
   </div>
 <% end %>
 
-<%= link_to 'Back to Secret', @secret %>
+<%= link_to t('.back-to-secret'), @secret %>
