--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
 
 
 <div class="radius-adjustment">
-  <label for="radiusSlider" class="radius-label">Adjust radius (km):</label>
+  <label for="radiusSlider" class="radius-label"><%= t('.adjust-radius') %></label>
   <input id="radiusSlider" type="range" min="1" max="10" value="1" step="0.1" class="radius-slider" 
          oninput="updateRadius(this.value)">
   <span id="radiusValue" class="radius-value">1 km</span>
