--- a/app/views/secrets/_form.html.erb
+++ b/app/views/secrets/_form.html.erb
@@ -9,28 +9,24 @@
       </ul>
     </div>
   <% end %>
-
   
   <div class="form-group">
     <%= form.label :name, t('global.name'), class: 'form-label' %>
     <%= form.text_field :name, required: true, class: 'form-input' %>
   </div>
-
   
   <div class="form-group">
-    <%= form.label :image, "Upload Image", class: 'form-label' %>
+    <%= form.label :image, t('global.upload-image'), class: 'form-label' %>
     <%= form.file_field :image, class: 'form-file' %>
   </div>
-
 
   <div class="form-group">
     <%= form.label :description, t('global.description'), class: 'form-label' %>
     <%= form.text_area :description, required: true, rows: 3, class: 'form-textarea' %>
   </div>
 
- 
   <div class="form-group">
-  <%= form.label :secret_tags, "Select Tags" %>
+  <%= form.label :secret_tags, t('.select-tags') %>
 
   <% SecretTag::VALID_TAGS.each do |tag| %>
     <div class="form-check">
@@ -42,22 +38,20 @@
   <% end %>
 </div>
 
-
-  
   <div class="form-group">
-    <%= form.label :latitude, "Latitude", class: 'form-label' %>
+    <%= form.label :latitude, t('.latitude'), class: 'form-label' %>
     <%= form.text_field :latitude, id: "latitudeField", readonly: true, required: true, class: 'form-input' %>
   </div>
 
   
   <div class="form-group">
-    <%= form.label :longitude, "Longitude", class: 'form-label' %>
+    <%= form.label :longitude, t('.longitude'), class: 'form-label' %>
     <%= form.text_field :longitude, id: "longitudeField", readonly: true, required: true, class: 'form-input' %>
   </div>
 
  
   <div class="form-group">
-    <%= form.label :address, "Address", class: 'form-label' %>
+    <%= form.label :address, t('.address'), class: 'form-label' %>
     <%= form.text_field :address, id: "addressField", readonly: true, required: true, class: 'form-input' %>
   </div>
 
