--- a/app/views/secrets/_secret.html.erb
+++ b/app/views/secrets/_secret.html.erb
@@ -2,32 +2,29 @@
 
 <div id="<%= dom_id secret %>" class="secret-container">
 
-
   <div class="user-info">
-    <strong><%= t('global.user') %>:</strong>
+    <strong><%= t('global.user') %></strong>
     <%= User.find(secret.user_id).email %>
   </div>
 
-
   <h1><%= secret.name %></h1>
-
 
   <div class="image-container">
     <% if secret.image.attached? %>
       <%= link_to image_tag(secret.image_as_thumbnail, alt: secret.name), secret.image %>
     <% else %>
-      <div class="no-image">No image available</div>
+      <div class="no-image"><%= t('.no-image') %></div>
     <% end %>
   </div>
 
   <div class="body">
-    <strong><%= t('global.body') %>:</strong><br>
+    <strong><%= t('global.description') %></strong><br>
     <%= secret.body %>
   </div>
 
   <% if secret.secret_tags.any? %>
     <div class="tags-section">
-      <strong>Tags:</strong>
+      <strong><%= t('.tags') %></strong>
       <div class="tags-list">
         <% secret.secret_tags.each do |tag| %>
           <span class="tag <%= tag.name.parameterize %>">
@@ -37,7 +34,7 @@
       </div>
     </div>
   <% else %>
-    <p class="no-tags">No tags available</p>
+    <p class="no-tags"><%= t('.no-tags') %></p>
   <% end %>
 
 </div>
